fixed overlapping problem with content and position fixed

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ header{
     width: 100%;
     top: 0;
     background-color: var(--main-color);
+    z-index: +1;
     
 }
 
